--- a/src/index.html
+++ b/src/index.html
@@ -25,12 +25,25 @@ body {
   left: 10px;
   z-index: 9999;
 }
+#menu img
+{
+  display: block;
+  width: 48px;
+  height: auto;
+  margin-bottom: 5px;
+  border: 2px solid #999999;
+  cursor: pointer;
+}
+#menu img:hover
+{
+  border: 2px solid #555555;
+}
 </style>
 </head>
 <body>
 
 <div id="map"></div>
-<div><select id="menu"></select></div>
+<div id="menu"></div>
 
 <script src="app.js"></script>
 </body>
