--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 <title>Styles | TileCloud</title>
 <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.css' rel='stylesheet' />
 <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.js'></script>
+<link rel="apple-touch-icon" href="./icon.png" />
 <style>
 body {
   margin: 0;
