--- a/src/index.html
+++ b/src/index.html
@@ -5,41 +5,9 @@
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 <title>Styles | TileCloud</title>
 <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.css' rel='stylesheet' />
+<link href='./style.css' rel='stylesheet' />
 <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.js'></script>
 <link rel="apple-touch-icon" href="./icon.png" />
-<style>
-body {
-  margin: 0;
-  padding: 0;
-}
-#map
-{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-}
-#menu
-{
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  z-index: 9999;
-}
-#menu img
-{
-  display: block;
-  width: 48px;
-  height: auto;
-  margin-bottom: 5px;
-  border: 2px solid #999999;
-  cursor: pointer;
-}
-#menu img:hover
-{
-  border: 2px solid #555555;
-}
-</style>
 </head>
 <body>
 
