--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,18 @@
 <meta charset="UTF-8">
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 <title>Styles | TileCloud</title>
-<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.css' rel='stylesheet' />
-<link href='./style.css' rel='stylesheet' />
-<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.js'></script>
 <link rel="apple-touch-icon" href="./icon.png" />
 </head>
 <body>
 
-<div id="map"></div>
+<div
+  id="map"
+  data-gesture-handling="off"
+  data-hash="on"
+></div>
 <div id="menu"></div>
 
+<script type="text/javascript" src="https://api.tilecloud.io/dev/embed?tilecloud-api-key=YOUR-API-KEY"></script>
 <script src="app.js"></script>
 </body>
 </html>
