--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,19 @@
 </head>
 <body>
 
-<div
-  id="map"
-  data-gesture-handling="off"
-  data-hash="on"
-></div>
-<div id="menu"></div>
+  <div class="container">
+    <div class="left">
+      <div
+        id="map"
+        data-gesture-handling="off"
+        data-hash="on"
+      ></div>
+      <div id="menu"></div>
+    </div>
+    <div class="right">
+      <pre id="json"></pre>
+    </div>
+  </div>
 
 <script type="text/javascript" src="https://api.tilecloud.io/dev/embed?tilecloud-api-key=YOUR-API-KEY"></script>
 <script src="app.js"></script>
