--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-<title>Styles | TileCloud</title>
+<title>Styles | Geolonia</title>
 <link rel="apple-touch-icon" href="./icon.png" />
 </head>
 <body>
