--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-<script type="text/javascript" src="https://api.tilecloud.io/dev/embed?tilecloud-api-key=YOUR-API-KEY"></script>
+<script type="text/javascript" src="https://api.geolonia.com/dev/embed?geolonia-api-key=YOUR-API-KEY"></script>
 <script src="app.js"></script>
 </body>
 </html>
